# open-hallucination-index

./: .dockerignore  .env.example  .gitignore  .ingest_checkpoint.json  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INGESTION_RESILIENCE_IMPROVEMENTS.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  benchmark_dataset.csv  benchmark_suite.py  build_log.txt  conftest.py  docker-compose.api.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  research-paper.tex  research-results-1.txt  research-results-2.txt  run_benchmark.sh  run_benchmark_full.sh  run_benchmark_ohi_detailed.sh  run_benchmark_test.sh  run_ingestion.sh  tailwind.config.ts
.github/: E2E_SETUP.md  PULL_REQUEST_TEMPLATE.md  SECRETS.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark-ci.yml  bootstrap-drift.yml  calibration-seed.yml  ci.yml  cloudflare-production.yml  dependencies.yml  docker-publish.yml  frontend.yml  infra-apply.yml  infra-plan.yml  ingestion-ci.yml  quality.yml  release.yml  semgrep.yml  test.yml  v2-auto-rollback.yml  v2-main-deploy.yml  v2-post-deploy-verify.yml  v2-post-merge-probe.yml  v2-release-on-feat-green.yml  v2-unit-tests.yml
api/: .env.example  pyproject.toml
benchmark/: README.md  config.py  pyproject.toml  runner.py  test_mcp_individual_tools.py
docker/: README.md
docs/: API.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_ARCHITECTURE.md  FRONTEND.md  Open Hallucination Index  New.tex  PUBLIC_ACCESS.md  RESEARCH_INGESTION_SOURCES.md  TESTING.md
e2e/: auth.spec.ts  homepage.spec.ts  navigation.spec.ts  pricing.spec.ts  visual-and-interactions.spec.ts
frontend/: implementation-plan.md  package-lock.json  package.json  tsconfig.json
gui_benchmark_app/: COMPLETE_MODE_IMPLEMENTATION.md  README.md  app.py  launch_gui.bat  launch_gui.ps1
gui_ingestion_app/: README.md  app.py  launch_gui.bat  launch_gui.ps1
gui_ingestion_app/ingestion/: README.md  __init__.py  __main__.py  checkpoint.py  downloader.py  gui_app.py  models.py  neo4j_store.py  optimizer.py  pipeline.py  preprocessor.py  pyproject.toml  qdrant_store.py  sql_parsers.py
gui_ingestion_app/ingestion/tests/: conftest.py  test_downloader.py  test_models.py  test_preprocessor.py
ingestion/: README.md  __main__.py  models.py  neo4j_store.py  pipeline.py  preprocessor.py  qdrant_store.py
ref/: README.md  app.py  docker-compose.yml  health.py  ohi-background.md  products.csv  verification.py  verify_text.py
scripts/: OG_README.md  generate-og.cjs  import_wikipedia_to_neo4j.py  init-letsencrypt.sh  load_test_v2.py  rollback_lambda.py  seed_neo4j.py  synthetic_probe.py
src/api/: README.md  (+2 more)
src/ingestion/: README.md  pyproject.toml
src/ingestion/tests/: __init__.py
(+625 files in other folders)
