[project]
name = "ohi-ingestion"
version = "3.0.0"
description = "High-performance Wikipedia ingestion pipeline for OHI"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.6.0",
    "neo4j>=5.0.0",
    "lxml>=4.9.0",
    "mwparserfromhell>=0.6.0",
    "nltk>=3.8.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingestion"]

[tool.setuptools.package-dir]
ingestion = "."

[tool.ruff]
target-version = "py310"
line-length = 100
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = """
    --cov=ingestion
    --cov-report=xml
    --cov-report=term-missing
    --cov-fail-under=60
    -v
"""
